samples/_failures_safe/1761516558_0d808d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_af7c00c6.c: In function ‘tokenize’:
./samples/SAFE/__tmp_af7c00c6.c:162:36: error: ‘TO’ undeclared (first use in this function)
  162 |         tokens[token_count].type = TO
      |                                    ^~
./samples/SAFE/__tmp_af7c00c6.c:162:36: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_af7c00c6.c:162:38: error: expected ‘;’ at end of input
  162 |         tokens[token_count].type = TO
      |                                      ^
      |                                      ;
./samples/SAFE/__tmp_af7c00c6.c:162:9: error: expected declaration or statement at end of input
  162 |         tokens[token_count].type = TO
      |         ^~~~~~
./samples/SAFE/__tmp_af7c00c6.c:162:9: error: expected declaration or statement at end of input
